<resources>
    <string name="app_name">AWITD contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_launch">First Launch</string>
    <string name="call_home">CALL HOME</string>
    <string name="call_mobile">CALL MOBILE</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="id_example_text">Example: AW007</string>
    <string name="id_editText_hint">ID   eg: AW007</string>
    <string name="name_editText_hint">Name</string>
    <string name="team_editText_hint">Team / Position</string>
    <string name="mobile_editText_hint">Mobile (not include <b>09</b>)</string>
    <string name="home_editText_hint">Home (not include <b>09</b>)</string>
    <string name="skip">SKIP</string>
    <string name="upload">CONTINUE</string>
    <string name="get_start">Get Start</string>
    <string name="main_activity_title_lal">AWITD Contacts</string>
    <string name="connection_offline">Sorry! Not Connected to Internet</string>
    <string name="connection_online">Good! Connected to Internet</string>
    <string name="upload_success">Successfully Uploaded!</string>
    <string name="upload_progress_text">Uploading...</string>
    <string name="to_fill_all_textFill">All fields are mandatory to fill.</string>
    <string name="to_enter_name">Please enter your Name!</string>
    <string name="to_enter_id">Please enter your ID!</string>
    <string name="to_enter_team_name">Please enter your Team!</string>
    <string name="to_enter_mobile_number">Please fill your Mobile Phone Number.</string>
    <string name="to_enter_home_ph_number">Please fill your Home Phone Number.</string>
    <string name="upload_exception_text">Something Wrong! Please Try Again.</string>
    <string name="pick_pic_from_gallary">Select Picture</string>
    <string name="cannot_fetch_in_first_time_exception">Could not fetch image in first time...</string>
    <string name="check_your_connection">Please check your connection!</string>
    <string name="connected_mobile_data">Connected to Mobile Data</string>
    <string name="connected_wifi">Connected to Wifi</string>
    <string name="action_call_prefit_text">tel: 09</string>
    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notification</string>
    <string name="exit_text_snackbar">Please click BACK again to exit!</string>
    <string name="menu_search">Search</string>
    <string name="menu_about">Credit</string>
    <string name="main_frame_activity_title">AWITD contact, YGN</string>
    <string name="company_url"><u>www.awitd.com</u></string>
    <string name="awitd_brief_desc">Ayeyarwaddy information and technology development center</string>
    <string name="company_name">AWITD Co.,Ltd</string>
    <string name="chooser_title">Open With</string>
    <string name="developer_tweek">+ Follow Developer on Twitter</string>
    <string name="first_time_animate_head_text">AWITD Head Office, Yangon\n\tDigital Contact Book</string>
</resources>
