<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Your Profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem" />

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/anonymous_material" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:hint="@string/name_editText_hint"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_editText_hint"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_editText_hint"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_editText_hint"
                android:inputType="phone"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_editText_hint"
                android:inputType="phone"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_skip_upload"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/skip" />

            <Button
                android:id="@+id/button_upload"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>