<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header_imageview"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:background="@drawable/logo_bg"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/informations_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header_imageview"
        android:layout_marginBottom="-10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:text="PRODUCT OF"
            android:textSize="8dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/company_name"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/awitd_brief_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="@dimen/fab_margin"
            android:text="@string/company_url"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:text="Data Credit"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:text="AWITD Yangon Members"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:text="Version"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:text="v1.0"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/dev_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:text="@string/developer_tweek"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp" />

    </LinearLayout>

    <!--<ScrollView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/informations_container"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:padding="-20dp"-->
    <!--android:scrollbars="none">-->

    <!--<LinearLayout-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->


    <!--</LinearLayout>-->
    <!--</ScrollView>-->

    <!-- cheat code: negative margin -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/informations_container"
        android:layout_marginBottom="-30dp"
        android:elevation="10dp"
        android:paddingLeft="@dimen/fab_margin"
        android:src="@drawable/awitd_ygn_contact_book_icon" />

</RelativeLayout>